# django-semantic-admin

./: .gitignore  README.md  gulpfile.js  package.json  pyproject.toml  setup.py
demo/: Makefile  pyproject.toml
demo/demo/: settings.py  urls.py
semantic_admin/: __init__.py  apps.py  urls.py
semantic_admin/static/django-semantic-admin/css/: vendor.css
semantic_admin/static/django-semantic-admin/js/: semantic.js
semantic_admin/templates/admin/: base.html
