[tool.poetry]
name = "semantic_admin"
version = "0.1.0"
description = ""
authors = ["Djordje Atlialp <djordje@atlialp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 89
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
