[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Djordje Atlialp <djordje@atlialp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
semantic-admin = { path = "./../" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
